syntax = "proto3";

package com.learn.grpc.greeting;

//option java_package = "com.learn.grpc.greeting";
option java_multiple_files = true;

message Person {
    string firstName = 1;
    string lastName = 2;
}

message GreetingRequest {
    Person person = 1;
}

message GreetingResponse {
    string greeting = 1;
}

service GreetingService {
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};
}


